<resources>
    <string name="app_name">EcoRecicla</string>
    <string name="login">Iniciar Sesion</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="tipoProductoMensaje">Selecciona el tipo de producto</string>
    <string name="tipoMes">Selecciona el mes</string>

    <string name="cantidad">Cantidad</string>
    <string name="registradProducto">Registrar</string>
    <string name="registroUsuario">Registro</string>
    <string name="nombre">Nombre</string>
    <string name="telefono">Telefono</string>
    <string name="confirmPassword">Confirmar Password</string>

    <string name="mapaOption">Mapa puntos de Reciclaje</string>
    <string name="verMas">Ver más</string>


</resources>