<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.RegisterView">
    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <LinearLayout
            android:elevation="10dp"
            android:background="@color/white"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            android:paddingTop="10dp"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginVertical="0dp"
                android:id="@+id/nameEditText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/txNombre"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/telefonoEditTetx"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/telefono"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"/>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailEditText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:id="@+id/txEmail"

                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordEditText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:id="@+id/txPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/confirmPassword"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="text"
                    android:id="@+id/txConfirmPassword"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="200dp"
                android:layout_marginVertical="40dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                >
                <Button
                    android:id="@+id/btnRegistarUsuarios"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:text="@string/registroUsuario"
                    >

                </Button>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>