<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Views.LoginView">

    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">


        <TextView
            android:id="@+id/textView5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100dp"
            android:fontFamily="@font/roboto"
            android:text="@string/login"
            android:textAlignment="center"
            android:textSize="50sp" />

        <LinearLayout
            android:elevation="10dp"
            android:background="@color/white"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:layout_marginVertical="16dp"
                android:id="@+id/emailEditText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxLength="30"
                    android:singleLine="true" />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/passwordText"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:hint="@string/password"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordUser"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:drawableRight="@drawable/arrow_back"
                    android:inputType="textPassword"

                    android:maxLength="30" />

            </com.google.android.material.textfield.TextInputLayout>
            <LinearLayout
                android:layout_width="200dp"
                android:layout_marginVertical="20dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                >
                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="200dp"
                    android:layout_height="60dp"
                    android:text="@string/login"
                    >

                </Button>
            </LinearLayout>

        </LinearLayout>
        <LinearLayout
            android:layout_marginTop="100dp"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:id="@+id/registroUsers"
                android:layout_width="200dp"
                android:layout_height="60dp"
                android:text="@string/registroUsuario"
                />



        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>