<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"


    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            />

    </com.google.android.material.appbar.AppBarLayout>
    <LinearLayout
        android:layout_width="409dp"
        android:layout_height="729dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="1dp"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <!--<FrameLayout
            android:background="@color/white"
            android:elevation="8dp"
            android:layout_width="400dp"
            android:layout_height="200dp"
            >

        </FrameLayout>-->
        <LinearLayout
            android:elevation="10dp"
            android:background="@color/white"
            android:layout_width="350dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center_horizontal"
            >
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/selectDate"
                android:layout_marginTop="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/tipoMes">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/selectProduct"
                android:layout_marginVertical="20dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/tipoProductoMensaje">

                <AutoCompleteTextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/quantity"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:hint="@string/cantidad"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="number"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <LinearLayout
                android:layout_width="200dp"
                android:layout_marginVertical="20dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:gravity="center"
                >
                <Button
                    android:id="@+id/btnRegistrarProducto"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:text="@string/registradProducto"
                    >

                </Button>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottomAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        style="@style/Widget.MaterialComponents.BottomAppBar.Colored"
        app:menu="@menu/menu_main"
        app:navigationIcon="@drawable/news_vector"
        />


</androidx.coordinatorlayout.widget.CoordinatorLayout>